Added new module for invoice creation from recruitment

--- a/sourcing/views/hr_job_type_views.xml
+++ b/sourcing/views/hr_job_type_views.xml
@@ -15,7 +15,9 @@
                         </group>
                     </group>
                     <group>
-                        <field name="enable_bill_rate"/>
+                        <group name="enable_bill_rate">
+                            <field name="enable_bill_rate"/>
+                        </group>
                     </group>
                 </sheet>
             </form>
