--- a/recruitment_invoice_creation/views/account_move_views.xml
+++ b/recruitment_invoice_creation/views/account_move_views.xml
@@ -7,8 +7,19 @@
         <field name="inherit_id" ref="account.view_move_form"/>
         <field name="arch" type="xml">
         	<field name="invoice_date" position="after">
-        		<field name="application_id"/>
+        		<field name="application_id" readonly="1"/>
+        		<field name="hr_employee_id" readonly="1"/>
         	</field>
         </field>
+    </record>
+
+    <record  model="ir.actions.act_window" id="employee_invoice_actions">
+        <field name="name">Invoices</field>
+        <field name="res_model">account.move</field>
+        <field name="view_mode">tree,form</field>
+        <field name="view_ids" eval="[(5, 0, 0),
+                      (0, 0, {'view_mode': 'tree', 'view_id': ref('account.view_out_invoice_tree')}),
+                      (0, 0, {'view_mode': 'form', 'view_id': ref('account.view_move_form')})]"/>
+        <field name="domain">[('hr_employee_id', '=', active_id)]</field>
     </record>
 </odoo>
