--- a/recruitment_invoice_creation/views/hr_employee_views.xml
+++ b/recruitment_invoice_creation/views/hr_employee_views.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-
     <record model="ir.ui.view" id="view_employee_form_inherited">
         <field name="name">Employee</field>
         <field name="model">hr.employee</field>
@@ -21,6 +20,14 @@
 	        <xpath expr="//field[@name='is_module_lead']" position="after">
 	        	<field name="client_hired_date" readonly="1"/>
 	        </xpath>
+	        <xpath expr="//sheet/group[1]" position="inside">
+                <group string="SOW">
+                    <field name="sow_start_date"/>
+                    <field name="sow_end_date"/>
+                    <field name="sow_rate"/>
+                    <field name="notify_to" widget="many2many_tags"/>
+                </group>
+            </xpath>
         </field>
     </record>
 </odoo>
