Updated changes w.r.t msa/sow and tracking on field changes

--- a/employee_recruitment_customisation/views/hr_applicant_views.xml
+++ b/employee_recruitment_customisation/views/hr_applicant_views.xml
@@ -67,7 +67,7 @@
                 </h2>
             </xpath>
             <xpath expr="//field[@name='user_id']" position="after">
-                <field name="hr" invisible="1"/>
+                <field name="hr" invisible=""/>
                 <field name="client_id" required="1" options="{'no_create': True, 'no_create_edit': True}"/>
             </xpath>
             <xpath expr="//field[@name='medium_id']" position="replace">
