--- a/invoice_customisation/reports/report_invoice.xml
+++ b/invoice_customisation/reports/report_invoice.xml
@@ -29,8 +29,12 @@
                                 Invoice No: <span t-esc="o.name" style="margin-left:60px;"/><br/>
                                 Category of Service:&#160;&#160;  Information Technology Service<br/>
                                 Reference  &#160;&#160;&#160;&#160;<br/>
-                                Billing Period : <span t-esc="o.billing_from" style="margin-left:42px;"/> to <span t-esc="o.billing_to"/><br/>
-                                Kind attention : <span t-esc="o.kind_attention.name" style="margin-left:35px;"/><br/>
+                                <t t-if="o.billing_from and o.billing_to">
+                                    Billing Period : <span t-esc="o.billing_from" style="margin-left:35px;"/> to <span t-esc="o.billing_to"/><br/>
+                                </t>
+                                <t t-if="o.kind_attention.name">
+                                    Kind attention : <span t-esc="o.kind_attention.name" style="margin-left:35px;"/><br/>
+                                </t>
                                 Description: <span t-esc="o.description" style="margin-left:54px;"/><br/>
                             </td>
                         </tr>
@@ -45,8 +49,8 @@
                             <tr class="border-black" style="border: 1px solid black;border-bottom: 1px solid black;">
                                 <th name="sl_no" style="border: 1px solid black;border-bottom: 1px solid black;">Sl No.</th>
                                 <th name="th_description" class="text-left" style="border-top: 1px solid black;border-right: 1px solid black;"><span>Description</span></th>
-                                <th name="billing_rate" class="text-right" style="border-top: 1px solid black;border-right: 1px solid black;"><span>Billing Rate per Month in INR</span></th>
-                                <th name="th_priceunit" style="border-top: 1px solid black;border-right: 1px solid black;" t-attf-class="text-right {{ 'd-none d-md-table-cell' if report_type == 'html' else '' }}"><span>Unit Amount in INR</span></th>
+                                <th name="billing_rate" class="text-right" style="border-top: 1px solid black;border-right: 1px solid black;"><span>Billing Rate in INR</span></th>
+                                <th name="th_priceunit" style="border-top: 1px solid black;border-right: 1px solid black;" t-attf-class="text-right {{ 'd-none d-md-table-cell' if report_type == 'html' else '' }}"><span>Amount in INR</span></th>
                                 <th name="th_subtotal" style="border-top: 1px solid black;border-right: 1px solid black;" class="text-right">
                                     <span>Total in INR</span>
                                 </th>
